@@ -31,10 +31,10 @@ import org.mockito.Mockito;
 import org.mockito.stubbing.OngoingStubbing;
 
 import java.util.AbstractMap.SimpleEntry;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -62,11 +62,11 @@ public class WorkerTestUtils {
                 connectorConfigs,
                 connectorTargetStates(1, connectorNum, TargetState.STARTED),
                 taskConfigs(0, connectorNum, connectorNum * taskNum),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                Map.of(),
+                Map.of(),
                 appliedConnectorConfigs,
-                Collections.emptySet(),
-                Collections.emptySet());
+                Set.of(),
+                Set.of());
     }
 
     public static Map<String, Integer> connectorTaskCounts(int start,
@@ -168,6 +168,7 @@ public class WorkerTestUtils {
                 "Wrong rebalance delay in " + assignment);
     }
 
+    @SuppressWarnings("unchecked")
     public static <T, R extends ConnectRecord<R>> TransformationChain<T, R> getTransformationChain(
             RetryWithToleranceOperator<T> toleranceOperator,
             List<Object> results) {
