@@ -113,7 +113,7 @@ public class PluginUtilsTest {
 
     @Test
     public void testConnectApiClasses() {
-        List<String> apiClasses = Arrays.asList(
+        List<String> apiClasses = List.of(
             // Enumerate all packages and classes
             "org.apache.kafka.connect.",
             "org.apache.kafka.connect.components.",
@@ -201,7 +201,7 @@ public class PluginUtilsTest {
     @Test
     public void testConnectRuntimeClasses() {
         // Only list packages, because there are too many classes.
-        List<String> runtimeClasses = Arrays.asList(
+        List<String> runtimeClasses = List.of(
             "org.apache.kafka.connect.cli.",
             //"org.apache.kafka.connect.connector.policy.", isolated by default
             //"org.apache.kafka.connect.converters.", isolated by default
@@ -229,7 +229,7 @@ public class PluginUtilsTest {
 
     @Test
     public void testAllowedRuntimeClasses() {
-        List<String> jsonConverterClasses = Arrays.asList(
+        List<String> jsonConverterClasses = List.of(
             "org.apache.kafka.connect.connector.policy.",
             "org.apache.kafka.connect.connector.policy.AbstractConnectorClientConfigOverridePolicy",
             "org.apache.kafka.connect.connector.policy.AllConnectorClientConfigOverridePolicy",
@@ -256,7 +256,7 @@ public class PluginUtilsTest {
 
     @Test
     public void testTransformsClasses() {
-        List<String> transformsClasses = Arrays.asList(
+        List<String> transformsClasses = List.of(
             "org.apache.kafka.connect.transforms.",
             "org.apache.kafka.connect.transforms.util.",
             "org.apache.kafka.connect.transforms.util.NonEmptyListValidator",
@@ -309,7 +309,7 @@ public class PluginUtilsTest {
 
     @Test
     public void testAllowedJsonConverterClasses() {
-        List<String> jsonConverterClasses = Arrays.asList(
+        List<String> jsonConverterClasses = List.of(
             "org.apache.kafka.connect.json.",
             "org.apache.kafka.connect.json.DecimalFormat",
             "org.apache.kafka.connect.json.JsonConverter",
@@ -326,7 +326,7 @@ public class PluginUtilsTest {
 
     @Test
     public void testAllowedFileConnectors() {
-        List<String> jsonConverterClasses = Arrays.asList(
+        List<String> jsonConverterClasses = List.of(
             "org.apache.kafka.connect.file.",
             "org.apache.kafka.connect.file.FileStreamSinkConnector",
             "org.apache.kafka.connect.file.FileStreamSinkTask",
@@ -341,7 +341,7 @@ public class PluginUtilsTest {
 
     @Test
     public void testAllowedBasicAuthExtensionClasses() {
-        List<String> basicAuthExtensionClasses = Arrays.asList(
+        List<String> basicAuthExtensionClasses = List.of(
             "org.apache.kafka.connect.rest.basic.auth.extension.BasicAuthSecurityRestExtension"
             //"org.apache.kafka.connect.rest.basic.auth.extension.JaasBasicAuthFilter", TODO fix?
             //"org.apache.kafka.connect.rest.basic.auth.extension.PropertyFileLoginModule" TODO fix?
@@ -377,13 +377,13 @@ public class PluginUtilsTest {
 
     @Test
     public void testEmptyPluginUrls() throws Exception {
-        assertEquals(Collections.emptyList(), PluginUtils.pluginUrls(pluginPath));
+        assertEquals(List.of(), PluginUtils.pluginUrls(pluginPath));
     }
 
     @Test
     public void testEmptyStructurePluginUrls() throws Exception {
         createBasicDirectoryLayout();
-        assertEquals(Collections.emptyList(), PluginUtils.pluginUrls(pluginPath));
+        assertEquals(List.of(), PluginUtils.pluginUrls(pluginPath));
     }
 
     @Test
@@ -511,12 +511,12 @@ public class PluginUtilsTest {
                 sinkConnectors,
                 sourceConnectors,
                 converters,
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet()
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>()
         );
         Map<String, String> actualAliases = PluginUtils.computeAliases(result);
         Map<String, String> expectedAliases = new HashMap<>();
@@ -538,14 +538,14 @@ public class PluginUtilsTest {
         assertEquals(2, sinkConnectors.size());
         PluginScanResult result = new PluginScanResult(
                 sinkConnectors,
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet()
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>()
         );
         Map<String, String> actualAliases = PluginUtils.computeAliases(result);
         Map<String, String> expectedAliases = new HashMap<>();
@@ -561,15 +561,15 @@ public class PluginUtilsTest {
         SortedSet<PluginDesc<HeaderConverter>> headerConverters = new TreeSet<>();
         headerConverters.add(new PluginDesc<>(CollidingHeaderConverter.class, null, PluginType.HEADER_CONVERTER, CollidingHeaderConverter.class.getClassLoader()));
         PluginScanResult result = new PluginScanResult(
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
+                new TreeSet<>(),
+                new TreeSet<>(),
                 converters,
                 headerConverters,
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet()
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>()
         );
         Map<String, String> actualAliases = PluginUtils.computeAliases(result);
         Map<String, String> expectedAliases = new HashMap<>();
@@ -586,15 +586,15 @@ public class PluginUtilsTest {
         SortedSet<PluginDesc<Transformation<?>>> transformations = new TreeSet<>();
         transformations.add(new PluginDesc<>((Class<? extends Transformation<?>>) (Class<?>) Colliding.class, null, PluginType.TRANSFORMATION, Colliding.class.getClassLoader()));
         PluginScanResult result = new PluginScanResult(
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
+                new TreeSet<>(),
+                new TreeSet<>(),
                 converters,
-                Collections.emptySortedSet(),
+                new TreeSet<>(),
                 transformations,
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet(),
-                Collections.emptySortedSet()
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>(),
+                new TreeSet<>()
         );
         Map<String, String> actualAliases = PluginUtils.computeAliases(result);
         Map<String, String> expectedAliases = new HashMap<>();
