@@ -69,7 +69,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.apache.kafka.common.message.MetadataResponseData.MetadataResponseTopic;
@@ -161,8 +160,8 @@ public class TopicAdminTest {
         NewTopic newTopic = TopicAdmin.defineTopic("myTopic").partitions(1).compacted().build();
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, "myTopic", Collections.singletonList(topicPartitionInfo), null);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, "myTopic", List.of(topicPartitionInfo), null);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             assertFalse(admin.createTopic(newTopic));
             assertTrue(admin.createTopics(newTopic).isEmpty());
@@ -307,12 +306,12 @@ public class TopicAdminTest {
         NewTopic newTopic = TopicAdmin.defineTopic(topicName).partitions(1).compacted().build();
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), null);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), null);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             Map<String, TopicDescription> desc = admin.describeTopics(newTopic.name());
             assertFalse(desc.isEmpty());
-            TopicDescription topicDesc = new TopicDescription(topicName, false, Collections.singletonList(topicPartitionInfo));
+            TopicDescription topicDesc = new TopicDescription(topicName, false, List.of(topicPartitionInfo));
             assertEquals(desc.get("myTopic"), topicDesc);
         }
     }
@@ -381,14 +380,14 @@ public class TopicAdminTest {
     public void describeTopicConfigShouldReturnTopicConfigWhenTopicExists() {
         String topicName = "myTopic";
         NewTopic newTopic = TopicAdmin.defineTopic(topicName)
-                                      .config(Collections.singletonMap("foo", "bar"))
+                                      .config(Map.of("foo", "bar"))
                                       .partitions(1)
                                       .compacted()
                                       .build();
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), null);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), null);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             Map<String, Config> result = admin.describeTopicConfigs(newTopic.name());
             assertFalse(result.isEmpty());
@@ -438,11 +437,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingTopicCleanupPolicyShouldReturnTrueWhenTopicHasCorrectPolicy() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "compact");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "compact");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             boolean result = admin.verifyTopicCleanupPolicyOnlyCompact("myTopic", "worker.topic", "purpose");
             assertTrue(result);
@@ -452,11 +451,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingTopicCleanupPolicyShouldFailWhenTopicHasDeletePolicy() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "delete");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "delete");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             ConfigException e = assertThrows(ConfigException.class, () -> admin.verifyTopicCleanupPolicyOnlyCompact("myTopic", "worker.topic", "purpose"));
             assertTrue(e.getMessage().contains("to guarantee consistency and durability"));
@@ -466,11 +465,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingTopicCleanupPolicyShouldFailWhenTopicHasDeleteAndCompactPolicy() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "delete,compact");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "delete,compact");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             ConfigException e = assertThrows(ConfigException.class, () -> admin.verifyTopicCleanupPolicyOnlyCompact("myTopic", "worker.topic", "purpose"));
             assertTrue(e.getMessage().contains("to guarantee consistency and durability"));
@@ -480,11 +479,11 @@ public class TopicAdminTest {
     @Test
     public void verifyingGettingTopicCleanupPolicies() {
         String topicName = "myTopic";
-        Map<String, String> topicConfigs = Collections.singletonMap("cleanup.policy", "compact");
+        Map<String, String> topicConfigs = Map.of("cleanup.policy", "compact");
         Cluster cluster = createCluster(1);
         try (MockAdminClient mockAdminClient = new MockAdminClient(cluster.nodes(), cluster.nodeById(0))) {
-            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), Collections.emptyList());
-            mockAdminClient.addTopic(false, topicName, Collections.singletonList(topicPartitionInfo), topicConfigs);
+            TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, cluster.nodeById(0), cluster.nodes(), List.of());
+            mockAdminClient.addTopic(false, topicName, List.of(topicPartitionInfo), topicConfigs);
             TopicAdmin admin = new TopicAdmin(mockAdminClient);
             Set<String> policies = admin.topicCleanupPolicy("myTopic");
             assertEquals(1, policies.size());
@@ -501,7 +500,7 @@ public class TopicAdminTest {
     public void retryEndOffsetsShouldRethrowUnknownVersionException() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -519,7 +518,7 @@ public class TopicAdminTest {
     public void retryEndOffsetsShouldWrapNonRetriableExceptionsWithConnectException() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = 1000L;
         Cluster cluster = createCluster(1, "myTopic", 1);
 
@@ -548,7 +547,7 @@ public class TopicAdminTest {
     public void retryEndOffsetsShouldRetryWhenTopicNotFound() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = 1000L;
         Cluster cluster = createCluster(1, "myTopic", 1);
 
@@ -560,7 +559,7 @@ public class TopicAdminTest {
 
             TopicAdmin admin = new TopicAdmin(env.adminClient());
             Map<TopicPartition, Long> endoffsets = admin.retryEndOffsets(tps, Duration.ofMillis(100), 1);
-            assertEquals(Collections.singletonMap(tp1, offset), endoffsets);
+            assertEquals(Map.of(tp1, offset), endoffsets);
         }
     }
 
@@ -568,7 +567,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithNonRetriableWhenAuthorizationFailureOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -585,7 +584,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithUnsupportedVersionWhenVersionUnsupportedErrorOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -601,7 +600,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithTimeoutExceptionWhenTimeoutErrorOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(
@@ -619,7 +618,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWithNonRetriableWhenUnknownErrorOccurs() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Long offset = null; // response should use error
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -638,7 +637,7 @@ public class TopicAdminTest {
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
             TopicAdmin admin = new TopicAdmin(env.adminClient());
-            Map<TopicPartition, Long> offsets = admin.endOffsets(Collections.emptySet());
+            Map<TopicPartition, Long> offsets = admin.endOffsets(Set.of());
             assertTrue(offsets.isEmpty());
         }
     }
@@ -647,7 +646,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldReturnOffsetsForOnePartition() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         long offset = 1000L;
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
@@ -686,7 +685,7 @@ public class TopicAdminTest {
     public void endOffsetsShouldFailWhenAnyTopicPartitionHasError() {
         String topicName = "myTopic";
         TopicPartition tp1 = new TopicPartition(topicName, 0);
-        Set<TopicPartition> tps = Collections.singleton(tp1);
+        Set<TopicPartition> tps = Set.of(tp1);
         Cluster cluster = createCluster(1, topicName, 1);
         try (AdminClientUnitTestEnv env = new AdminClientUnitTestEnv(new MockTime(), cluster)) {
             env.kafkaClient().setNodeApiVersions(NodeApiVersions.create());
@@ -718,8 +717,8 @@ public class TopicAdminTest {
                 "mockClusterId",
                 nodes.values(),
                 pInfos,
-                Collections.emptySet(),
-                Collections.emptySet(),
+                Set.of(),
+                Set.of(),
                 leader);
     }
 
@@ -737,9 +736,9 @@ public class TopicAdminTest {
                         .setPartitionIndex(pInfo.partition())
                         .setLeaderId(pInfo.leader().id())
                         .setLeaderEpoch(234)
-                        .setReplicaNodes(Arrays.stream(pInfo.replicas()).map(Node::id).collect(Collectors.toList()))
-                        .setIsrNodes(Arrays.stream(pInfo.inSyncReplicas()).map(Node::id).collect(Collectors.toList()))
-                        .setOfflineReplicas(Arrays.stream(pInfo.offlineReplicas()).map(Node::id).collect(Collectors.toList()));
+                        .setReplicaNodes(Arrays.stream(pInfo.replicas()).map(Node::id).toList())
+                        .setIsrNodes(Arrays.stream(pInfo.inSyncReplicas()).map(Node::id).toList())
+                        .setOfflineReplicas(Arrays.stream(pInfo.offlineReplicas()).map(Node::id).toList());
                 pms.add(pm);
             }
             MetadataResponseTopic tm = new MetadataResponseTopic()
@@ -787,7 +786,7 @@ public class TopicAdminTest {
     }
 
     private ListOffsetsResponse listOffsetsResult(TopicPartition tp1, Long offset1) {
-        return listOffsetsResult(null, Collections.singletonMap(tp1, offset1));
+        return listOffsetsResult(null, Map.of(tp1, offset1));
     }
 
     private ListOffsetsResponse listOffsetsResult(TopicPartition tp1, Long offset1, TopicPartition tp2, Long offset2) {
@@ -889,7 +888,7 @@ public class TopicAdminTest {
 
     protected TopicDescription topicDescription(MockAdminClient admin, String topicName)
             throws ExecutionException, InterruptedException {
-        DescribeTopicsResult result = admin.describeTopics(Collections.singleton(topicName));
+        DescribeTopicsResult result = admin.describeTopics(Set.of(topicName));
         Map<String, KafkaFuture<TopicDescription>> byName = result.topicNameValues();
         return byName.get(topicName).get();
     }
@@ -958,8 +957,8 @@ public class TopicAdminTest {
                                 .map(e -> new DescribeConfigsResponseData.DescribeConfigsResourceResult()
                                         .setName(e.getKey())
                                         .setValue(e.getValue()))
-                                .collect(Collectors.toList())))
-                .collect(Collectors.toList());
+                                .toList()))
+                .toList();
         return new DescribeConfigsResponse(new DescribeConfigsResponseData().setThrottleTimeMs(1000).setResults(results));
     }
 
