@@ -16,6 +16,7 @@
  */
 package org.apache.kafka.jmh.assignor;
 
+import org.apache.kafka.coordinator.common.runtime.CoordinatorMetadataImage;
 import org.apache.kafka.coordinator.group.streams.StreamsGroupMember;
 import org.apache.kafka.coordinator.group.streams.TopologyMetadata;
 import org.apache.kafka.coordinator.group.streams.assignor.AssignmentMemberSpec;
@@ -27,7 +28,6 @@ import org.apache.kafka.coordinator.group.streams.assignor.StickyTaskAssignor;
 import org.apache.kafka.coordinator.group.streams.assignor.TaskAssignor;
 import org.apache.kafka.coordinator.group.streams.assignor.TopologyDescriber;
 import org.apache.kafka.coordinator.group.streams.topics.ConfiguredSubtopology;
-import org.apache.kafka.image.MetadataImage;
 
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -44,7 +44,6 @@ import org.openjdk.jmh.annotations.Threads;
 import org.openjdk.jmh.annotations.Warmup;
 import org.openjdk.jmh.infra.Blackhole;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -100,14 +99,14 @@ public class StreamsStickyAssignorBenchmark {
 
         SortedMap<String, ConfiguredSubtopology> subtopologyMap = StreamsAssignorBenchmarkUtils.createSubtopologyMap(partitionCount, allTopicNames);
 
-        MetadataImage metadataImage = AssignorBenchmarkUtils.createMetadataImage(allTopicNames, partitionCount);
+        CoordinatorMetadataImage metadataImage = AssignorBenchmarkUtils.createMetadataImage(allTopicNames, partitionCount);
 
         topologyDescriber = new TopologyMetadata(metadataImage, subtopologyMap);
 
         taskAssignor = new StickyTaskAssignor();
 
         Map<String, StreamsGroupMember> members = createMembers();
-        this.assignmentConfigs = Collections.singletonMap(
+        this.assignmentConfigs = Map.of(
             "num.standby.replicas",
             Integer.toString(standbyReplicas)
         );
@@ -138,7 +137,7 @@ public class StreamsStickyAssignorBenchmark {
         for (Map.Entry<String, AssignmentMemberSpec> member : groupSpec.members().entrySet()) {
             MemberAssignment memberAssignment = members.getOrDefault(
                 member.getKey(),
-                new MemberAssignment(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap())
+                new MemberAssignment(Map.of(), Map.of(), Map.of())
             );
 
             updatedMemberSpec.put(member.getKey(), new AssignmentMemberSpec(
