@@ -59,7 +59,6 @@ import java.nio.ByteBuffer;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -67,6 +66,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 
@@ -291,13 +291,13 @@ public class ClientCompatibilityTest {
             tryFeature("createTopics", testConfig.createTopicsSupported,
                 () -> {
                     try {
-                        client.createTopics(Collections.singleton(
+                        client.createTopics(Set.of(
                             new NewTopic("newtopic", 1, (short) 1))).all().get();
                     } catch (ExecutionException e) {
                         throw e.getCause();
                     }
                 },
-                () ->  createTopicsResultTest(client, Collections.singleton("newtopic"))
+                () ->  createTopicsResultTest(client, Set.of("newtopic"))
             );
 
             while (true) {
@@ -337,7 +337,7 @@ public class ClientCompatibilityTest {
                     );
 
                     Map<ConfigResource, Config> brokerConfig =
-                        client.describeConfigs(Collections.singleton(configResource)).all().get();
+                        client.describeConfigs(Set.of(configResource)).all().get();
 
                     if (brokerConfig.get(configResource).entries().isEmpty()) {
                         throw new KafkaException("Expected to see config entries, but got zero entries");
