@@ -55,7 +55,6 @@ import org.junit.jupiter.api.Timeout;
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -405,11 +404,20 @@ public class DeleteStreamsGroupTest {
             updateStreamsGroupProtocol((short) 0);
             final Map<String, Throwable> result = new HashMap<>();
             String output = ToolsTestUtils.grabConsoleOutput(() -> result.putAll(service.deleteGroups()));
+            System.out.println(output);
 
             assertTrue(output.contains("Deletion of requested streams groups ('" + appId + "') was successful."),
                 "The streams group could not be deleted as expected");
-            assertTrue(output.contains("Retrieving internal topics is not supported by the broker version. " +
-                "Use 'kafka-topics.sh' to list and delete the group's internal topics."));
+            assertTrue(output.contains("Retrieving internal topics is not supported by the broker version."));
+            assertTrue(output.contains("Use 'kafka-topics.sh' to delete the group's internal topics."));
+            // Validate the list of internal topics in error message
+            assertTrue(output.contains("Internal topics:"));
+            System.out.println(output);
+            assertTrue(
+                output.matches("(?s).*" + APP_ID_PREFIX + "[a-zA-Z0-9\\-]+-(aggregated_value-changelog|repartition|changelog).*"),
+                "The internal topic name does not match the expected format. Output: " + output
+            );
+
             assertEquals(1, result.size());
             assertTrue(result.containsKey(appId));
             assertNull(result.get(appId), "The streams group could not be deleted as expected");
@@ -551,7 +559,7 @@ public class DeleteStreamsGroupTest {
     private static StreamsBuilder builder(String inputTopic, String outputTopic) {
         final StreamsBuilder builder = new StreamsBuilder();
         builder.stream(inputTopic, Consumed.with(Serdes.String(), Serdes.String()))
-            .flatMapValues(value -> Arrays.asList(value.toLowerCase(Locale.getDefault()).split("\\W+")))
+            .flatMapValues(value -> List.of(value.toLowerCase(Locale.getDefault()).split("\\W+")))
             .groupBy((key, value) -> value)
             .count()
             .toStream().to(outputTopic, Produced.with(Serdes.String(), Serdes.Long()));
